--- a/index.html
+++ b/index.html
@@ -2,5 +2,10 @@
 <hr>
 <h3>Where Education meets Intelligence</h3>
 <hr>
+<div align="right">
+  <a href="index.html">Home</a> |
+  <a href="courses.html">Offerings</a>
+  <a href="contact.html">Contact us </a>
+</div>
 <hr>
 <hr>
