--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <hr>
 <div align="right">
   <a href="index.html">Home</a> |
-  <a href="courses.html">Offerings</a>
+  <a href="courses.html">Offerings</a> |
   <a href="contact.html">Contact us </a>
 </div>
 <hr>
